# flappy-bird-rl

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml  final.yaml  screen_a.yaml  screen_b.yaml
docs/: summary.md
docs/adr/: 0001-keep-dqn-on-stable-baselines3.md  0002-keep-feature-observation.md  0003-reward-unchanged-but-config-driven.md  0004-headless-first-environment.md  0005-evaluation-protocol-and-solved-definition.md  0006-jsonl-ledger-no-external-tracker.md  0007-bounded-reward-scale.md
journal/: 001-starting-line.md  002-refactor-without-moving-the-physics.md  003-reward-scale-was-the-whole-problem.md  004-solved-on-all-three-seeds.md  005-the-clean-clone-test-earns-its-keep.md
results/: baseline_pre_refactor.jsonl  ledger.jsonl
scripts/: baseline_pre_refactor.py
src/: agent.py  flappy_env.py  main.py
src/reinforced_flapper/: __init__.py  cli.py  config.py  env.py  evaluate.py  ledger.py  plots.py  runlog.py  train.py  video.py
src/reinforced_flapper/game/: __init__.py  assets.py  constants.py  core.py  utils.py
src/reinforced_flapper/game/entities/: __init__.py  background.py  entity.py  floor.py  pipe.py  player.py  score.py
tests/: conftest.py  test_config.py  test_env.py  test_evaluate.py  test_ledger.py  test_train_smoke.py
