[project]
name = "reinforced-flapper"
version = "0.2.0"
description = "Reproducible Flappy Bird reinforcement learning pipeline using Gymnasium and Stable-Baselines3"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.1",
    "numpy>=2.2.1",
    "stable-baselines3>=2.7.0",
    "gymnasium>=1.2.0",
    "pyyaml>=6.0.2",
    "pydantic>=2.11.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.3",
    "ty>=0.0.1a21",
    "pytest>=8.3.0",
    "pre-commit>=4.0.1",
]

[project.scripts]
flapper = "reinforced_flapper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reinforced_flapper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # PEP 8 errors (syntax or structural errors in the code)
    "F",    # Pyflakes rules for catching unused imports and variables
    "W",    # General warnings for non-standard Python usage
    "I",    # Import sorting and organization
    "N",    # Naming convention rules for variables, functions, and classes
    "D",    # pydocstyle - docstring conventions
    "BLE",  # Better list expressions and prevents suboptimal code patterns
    "B",    # Bug risk and best practice rules
    "A",    # Anti-pattern detection and prevents commonly misused idioms
    "ICN",  # Improved code readability and naming conventions
    "Q",    # Consistent usage of single or double quotes
    "PD",   # Pandas-specific best practices and catches common issues
    "ANN",  # Checks for type/return annotations
    "UP",   # Upgrade syntax for newer Python versions
    "C4",   # Code complexity and comprehensions
    "SIM",  # Code simplification suggestions
    "PT",   # pytest-style checks
    "PTH",  # Use pathlib instead of os.path
    "PIE",  # Miscellaneous linting rules
    "ISC",  # Implicit string concatenation
    "TID",  # Tidy imports
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "D203",  # One blank line before class (conflicts with D211)
    "D213",  # Multi-line summary second line (conflicts with D212)
    "ANN401",  # Allow typing.Any for generic/wrapper functions
]
unfixable = [
    "F401",  # Prevent auto-removal of unused imports while editing
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
